Fix bugs for Shift update by department manager functions

--- a/src/assets/scss/timesheet.scss
+++ b/src/assets/scss/timesheet.scss
@@ -79,6 +79,7 @@
       .action {
         padding: 10px 0 !important;
         justify-content: space-evenly !important;
+        background: #F2F2F2;
         button {
           width: 80px;
           font-size: 13px;
